Adding muon reconstruction section

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -1,5 +1,5 @@
 \chapter{\texorpdfstring{Search for \Htohhtobbtautau}{Search for H -> hh -> bbtautau}}
-\label{sec:hhh}
+\label{chap:hhh}
 In this chapter the search for a heavy Higgs boson decaying to a pair of 125 GeV Higgs bosons, with one of these Higgs bosons decaying to 
 a pair of b-jets and the other decaying to a pair of \Ptau leptons is discussed. In this analysis, which 
 uses a dataset corresponding to 19.8 fb$^{-1}$ collected during the 2012 p--p running
