--- a/backmatter.tex
+++ b/backmatter.tex
@@ -47,6 +47,10 @@
 \acro{RF}[RF]{radio frequency}
 \acro{PF}[PF]{Particle Flow}
 \acro{BDTs}[BDTs]{Boosted Decision Trees}
+\acro{CTF}[CTF]{Combinatorial Track Finder}
+\acro{GSF}[GSF]{Gaussian Sum Filter}
+%\acro{KF}[KF]{Kalman Filter}
+\acro{DA}[DA]{Deterministic Annealing}
 \end{acronym}
 
 
