--- a/backmatter.tex
+++ b/backmatter.tex
@@ -51,6 +51,7 @@
 \acro{GSF}[GSF]{Gaussian Sum Filter}
 %\acro{KF}[KF]{Kalman Filter}
 \acro{DA}[DA]{Deterministic Annealing}
+\acro{CHS}[CHS]{Charged hadron subtraction}
 \end{acronym}
 
 
